<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="655dp"
        android:layout_height="1000dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="220dp"
        android:rotation="-45"
        android:src="@drawable/constraint_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:layout_marginTop="120dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="180dp"
         app:cardElevation="30dp"
         app:cardUseCompatPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/loginİmage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/innova" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/mobilePortView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/loginText"
        android:textColor="@color/centerColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/loginEmailLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="48dp"
         android:hint="@string/loginEmailLayoutHint"
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toTopOf="@+id/loginPasswordLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mobilePortView"
         app:startIconDrawable="@drawable/email_icon">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/loginEmailText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/loginPasswordLayoutHint"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailLayout"
        app:startIconDrawable="@drawable/lock_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/loginRememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkBox"
        android:textColor="@color/centerColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/centerColor"
        android:fontFamily="sans-serif-medium"
        android:text="@string/submitButtonText"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginRememberMeCheckBox" />


</androidx.constraintlayout.widget.ConstraintLayout>

     <!-- <TextView
          android:id="@+id/loginText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loginText"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:textColor="@color/endColor"
          android:textSize="48sp"
          tools:layout_editor_absoluteX="82dp"
          tools:layout_editor_absoluteY="311dp" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/loginEmailLayout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/loginEmailLayoutHint"
          app:endIconMode="clear_text"
          app:startIconDrawable="@drawable/email_icon"
          tools:layout_editor_absoluteX="64dp"
          tools:layout_editor_absoluteY="411dp">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/loginEmailText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:singleLine="true" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/loginPasswordLayout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/loginPasswordLayoutHint"
          app:endIconMode="password_toggle"
          app:startIconDrawable="@drawable/lock_icon"
          tools:layout_editor_absoluteX="64dp"
          tools:layout_editor_absoluteY="492dp">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/passwordText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:singleLine="true" />
      </com.google.android.material.textfield.TextInputLayout>

      <CheckBox
          android:id="@+id/loginRememberMeBox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/checkBox"
          android:textSize="20sp"
          tools:layout_editor_absoluteX="211dp"
          tools:layout_editor_absoluteY="565dp" />

      <Button
          android:id="@+id/loginButton"
          android:layout_width="200dp"
          android:layout_height="70dp"
          android:background="@drawable/constraint_background"
          android:text="@string/submitButtonText"
          android:textAllCaps="false"
          android:textColor="@color/endColor"
          android:textSize="20sp"
          app:cornerRadius="20dp"
          tools:layout_editor_absoluteX="106dp"
          tools:layout_editor_absoluteY="632dp" />-->

